Fixed broken image links

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="https://images.app.goo.gl/wcWPFTrGN3x1NXR99" alt="Cooked lasagna in a dish" width="300">
+    <img src="https://www.eatingwell.com/thmb/nE4-963rUafhkVwJgDjPCqGQVVY=/750x0/filters:no_upscale():max_bytes(150000):strip_icc()/Veggie-Lasagna-beauty-552-b5123cb9307b406ea30ccda5f101d663.jpg" alt="Cooked lasagna in a dish" width="300">
     <h3>Description</h3>
     <p>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</p>
     <h3>Ingredients</h3>
