--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Cookies</h1>
-    <img src="https://images.app.goo.gl/ywu6EjDwvn2qTc3W8">
+    <img src="https://static01.nyt.com/images/2022/02/12/dining/JT-Chocolate-Chip-Cookies/JT-Chocolate-Chip-Cookies-master768.jpg?width=1280&quality=75&auto=webp" alt="Tray of freshly baked chocolate chip cookies" width="350">
     <h3>Description</h3>
     <p>This chocolate chip cookie recipe is truly the best. Just take it from the 14,000 members of the Allrecipes community who have given it rave reviews! These chocolate chip cookies are beloved because they're soft, chewy, and absolutely irresistible. Our top-rated recipe for chocolate chip cookies will quickly become your go-to.</p>
     <h3>Ingredients</h3>
